Project Ziggle {
    database_type: 'postgresql'
}

Enum FileType {
    IMAGE
    DOCUMENT
}

Enum CrawlType {
    ACADEMIC
}

Table User {
    uuid varchar [pk]
    name varchar
    createdAt timestamp
    consent boolean
}

Table File {
    uuid varchar [pk]
    name varchar
    createdAt timestamp
    url varchar
    type FileType
    notice integer [ref: > Notice.id]
}

Table Content {
    id integer [pk, increment]

    lang varchar
    title varchar
    body text
    deadline timestamp
    createdAt timestamp

    notice integer [ref: > Notice.id]
}

Table Notice {
    id integer [pk, increment]

    views integer
    currentDeadline date
    createdAt timestamp
    deletedAt timestamp

    author varchar [ref: > User.uuid]
    reminders varchar [ref: <> User.uuid]
    tags integer [ref: <> Tag.id]
}

Table Crawl {
    id integer [pk, increment]

    title varchar
    body longtext
    type CrawlType
    crawledAt timestamp

    url varchar
    deadline DateTime

    notice integer [ref: > Notice.id]
}

Table Tag {
    id integer [pk, increment]
    name varchar
}

Table Reaction {
    emoji varchar
    createdAt timestamp
    deletedAt timestamp
    notice integer [ref: > Notice.id]
    user varchar [ref: > User.uuid]

    Indexes {
        (notice, user, emoji) [unique]
    }
}